--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.5.6",
         "mongoose-unique-validator": "^2.0.3",
+        "nodemon": "^1.19.0",
         "underscore": "^1.9.1"
     }
 }
